# bevy-editor-2

./: package.json
bevy/crates/bevy_pbr/src/: light.rs
bevy/crates/bevy_render/src/: lib.rs
bevy/crates/bevy_render/src/camera/: camera.rs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/tauri/core/tauri-runtime-wry/: Cargo.toml
tauri/core/tauri-runtime-wry/src/: lib.rs
wry/src/webview/wkwebview/: mod.rs
